; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_bufc_to_flags.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_bufc_to_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARC_FLAG_BUFC_METADATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"undefined ARC buffer type!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @arc_bufc_to_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arc_bufc_to_flags(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %8 [
    i32 129, label %5
    i32 128, label %6
  ]

5:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

6:                                                ; preds = %1
  %7 = load i32, i32* @ARC_FLAG_BUFC_METADATA, align 4
  store i32 %7, i32* %2, align 4
  br label %11

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %8
  %10 = call i32 @panic(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %11

11:                                               ; preds = %9, %6, %5
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
